--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,38 @@ ul {
     padding: 0;
 }
 
+header li {
+    display: inline;
+}
+
+header h1, nav {
+    display: inline-block;
+}
+
+main {
+    width: 680px;
+    display: inline-block;
+}
+
+aside {
+    width: 270px;
+    display: inline-block;
+    vertical-align: top;
+}
+
 .product {
     border: 1px solid grey;
     width: 200px;
     margin: 5px;
     padding: 5px;
+    display: inline-block;
 }
 
 img {
     max-width: 100%;
+}
+
+.button {
+    padding: 10px;
+    display: inline-block;
 }
