--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,9 @@ aside {
 }
 
 .product {
+    box-sizing: border-box;
     border: 1px solid grey;
-    width: 200px;
+    width: 210px;
     margin: 5px;
     padding: 5px;
     display: inline-block;
