--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ ul {
     padding: 0;
 }
 
+li {
+    list-style: none;
+    line-height: 30px;
+}
+
 header li {
     display: inline;
 }
@@ -30,12 +35,14 @@ header h1, nav {
 main {
     width: 680px;
     display: inline-block;
+    padding: 10px;
 }
 
 aside {
     width: 270px;
     display: inline-block;
     vertical-align: top;
+    padding: 10px;
 }
 
 .product {
