Final project styling

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 header, footer {
     background: #333a40;
     color: white;
+    padding: 20px 10px;
 }
 
 ul {
@@ -42,6 +43,10 @@ header h1, nav {
     display: inline-block;
 }
 
+header h1 {
+    width: 65%;
+}
+
 main {
     width: 680px;
     display: inline-block;
@@ -62,6 +67,7 @@ aside {
     margin: 5px;
     padding: 5px;
     display: inline-block;
+    text-align: center;
 }
 
 img {
@@ -99,7 +105,7 @@ form > div {
     margin: 10px 0;
 }
 
-.inline label{
+.inline label {
     display: inline-block;
     width: 100px;
 }
@@ -107,4 +113,26 @@ form > div {
 input[type="text"], input[type="email"], textarea {
     padding: 10px;
     width: 400px;
+}
+
+/* Table */
+table {
+    width: 400px;
+    text-align: left;
+    margin: 20px 0;
+}
+
+caption {
+    font-weight: bold;
+    font-style: italic;
+    border-bottom: 1px dotted; 
+    padding: 10px;
+}
+
+th, td {
+    padding: 10px;
+}
+
+tr:hover {
+    background: #f5f5f5;
 }
