--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 body {
     font-family: 'Barlow', sans-serif;
     background: white;
-    max-width: 1000px;
+    max-width: 80vw;
     margin: 0 auto;
     color: rgb(49, 46, 46); 
 }
