--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,15 @@ header h1 {
 }
 
 main {
-    width: 680px;
+    /* target / context = result */
+    /* 680 / 1000 = 0.68 */
+    width: 68%;
     display: inline-block;
     padding: 10px;
 }
 
 aside {
-    width: 270px;
+    width: 27%;
     display: inline-block;
     vertical-align: top;
     padding: 10px;
@@ -63,7 +65,7 @@ aside {
 .product {
     box-sizing: border-box;
     border: 1px solid grey;
-    width: 210px;
+    width: 30%;
     margin: 5px;
     padding: 5px;
     display: inline-block;
