Mobile styling first

--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,20 @@ html {
 body {
     font-family: 'Barlow', sans-serif;
     background: white;
-    max-width: 80vw;
+    /* max-width: 80vw; */    
     margin: 0 auto;
     color: rgb(49, 46, 46); 
+    text-align: center;
 }
 
 header, footer {
     background: #333a40;
     color: white;
     padding: 20px 10px;
+}
+
+input[type="search"] {
+    width: 100%;
 }
 
 ul {
@@ -44,31 +49,31 @@ header h1, nav {
 }
 
 header h1 {
-    width: 65%;
+    /* width: 65%; */
+    width: 100%;
 }
 
-main {
-    /* target / context = result */
-    /* 680 / 1000 = 0.68 */
+/* main {
     width: 68%;
     display: inline-block;
     padding: 10px;
-}
+} */
 
-aside {
+/* aside {
     width: 27%;
     display: inline-block;
     vertical-align: top;
     padding: 10px;
-}
+} */
 
 .product {
     box-sizing: border-box;
     border: 1px solid grey;
-    width: 30%;
+    /*width: 30%;*/
     margin: 5px;
     padding: 5px;
-    display: inline-block;
+    /* display: inline-block; */
+    width: 100%;
     text-align: center;
 }
 
