--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,6 @@ header h1 {
     /*width: 30%;*/
     margin: 5px;
     padding: 5px;
-    /* display: inline-block; */
     width: 100%;
     text-align: center;
 }
@@ -142,4 +141,16 @@ th, td {
 
 tr:hover {
     background: #f5f5f5;
+}
+
+@media (min-width: 800px) {
+    input[type="search"] {
+        width: 40%;
+        margin-left: 2em;
+    }
+
+    .product {
+        display: inline-block;
+        width: 48%;
+    }
 }
